charon/tests/ui/associated_types/issue-1068-double-visit.out
error: Type error after transformations:
       Mismatched type generics:
       target: Comparator
       expected: [A, Clause1_Type1]
            got: [Witness1, (), ()]
       Visitor stack:
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_vec::IndexVec<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::expressions::FnPtr
         charon_lib::ast::gast::FnOperand
         charon_lib::ast::gast::Call
         charon_lib::ast::llbc_ast::StatementKind
         charon_lib::ast::llbc_ast::Statement
         alloc::vec::Vec<charon_lib::ast::llbc_ast::Statement>
         charon_lib::ast::llbc_ast::Block
         charon_lib::ast::gast::GExprBody<charon_lib::ast::llbc_ast::Block>
         charon_lib::ast::gast::Body
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: 
  --> tests/ui/associated_types/issue-1068-double-visit.rs:31:5
   |
31 |     check::<Witness2>()
   |     ^^^^^^^^^^^^^^^^^^^

error: Type error after transformations:
       Mismatched type generics:
       target: HasType1
       expected: [Self, Self_Type1]
            got: [Witness1, (), ()]
       Visitor stack:
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::types::RegionBinder<charon_lib::ast::types::TraitDeclRef>
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_vec::IndexVec<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_vec::IndexVec<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::expressions::FnPtr
         charon_lib::ast::gast::FnOperand
         charon_lib::ast::gast::Call
         charon_lib::ast::llbc_ast::StatementKind
         charon_lib::ast::llbc_ast::Statement
         alloc::vec::Vec<charon_lib::ast::llbc_ast::Statement>
         charon_lib::ast::llbc_ast::Block
         charon_lib::ast::gast::GExprBody<charon_lib::ast::llbc_ast::Block>
         charon_lib::ast::gast::Body
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 2):
         0: 
         1: 
  --> tests/ui/associated_types/issue-1068-double-visit.rs:31:5
   |
31 |     check::<Witness2>()
   |     ^^^^^^^^^^^^^^^^^^^

error: Type error after transformations:
       Mismatched type generics:
       target: Comparator
       expected: [A, Clause1_Type1]
            got: [Witness1, (), ()]
       Visitor stack:
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_vec::IndexVec<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::types::RegionBinder<charon_lib::ast::types::TraitDeclRef>
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_vec::IndexVec<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::expressions::FnPtr
         charon_lib::ast::gast::FnOperand
         charon_lib::ast::gast::Call
         charon_lib::ast::llbc_ast::StatementKind
         charon_lib::ast::llbc_ast::Statement
         alloc::vec::Vec<charon_lib::ast::llbc_ast::Statement>
         charon_lib::ast::llbc_ast::Block
         charon_lib::ast::gast::GExprBody<charon_lib::ast::llbc_ast::Block>
         charon_lib::ast::gast::Body
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 2):
         0: 
         1: 
  --> tests/ui/associated_types/issue-1068-double-visit.rs:31:5
   |
31 |     check::<Witness2>()
   |     ^^^^^^^^^^^^^^^^^^^

error: Type error after transformations:
       Mismatched type generics:
       target: HasType1
       expected: [Self, Self_Type1]
            got: [Witness1, (), ()]
       Visitor stack:
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::types::RegionBinder<charon_lib::ast::types::TraitDeclRef>
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_vec::IndexVec<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_vec::IndexVec<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::types::RegionBinder<charon_lib::ast::types::TraitDeclRef>
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_vec::IndexVec<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::expressions::FnPtr
         charon_lib::ast::gast::FnOperand
         charon_lib::ast::gast::Call
         charon_lib::ast::llbc_ast::StatementKind
         charon_lib::ast::llbc_ast::Statement
         alloc::vec::Vec<charon_lib::ast::llbc_ast::Statement>
         charon_lib::ast::llbc_ast::Block
         charon_lib::ast::gast::GExprBody<charon_lib::ast::llbc_ast::Block>
         charon_lib::ast::gast::Body
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 3):
         0: 
         1: 
         2: 
  --> tests/ui/associated_types/issue-1068-double-visit.rs:31:5
   |
31 |     check::<Witness2>()
   |     ^^^^^^^^^^^^^^^^^^^

ERROR Charon failed to translate this code (4 errors)
